// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SqlQueryEE should jump to sql query url when request return correct address 1`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="sqlQuery.pageTitle"
        >
          sqlQuery.pageTitle
        </span>
      </div>
    </div>
    <div
      class="ant-page-header-content"
    >
      sqlQuery.pageDescribe
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-space ant-space-vertical full-width-element"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <a
              class="ant-typography"
            >
              sqlQuery.jumpToCloudbeaver
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SqlQueryEE should match snapshot 1`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="sqlQuery.pageTitle"
        >
          sqlQuery.pageTitle
        </span>
      </div>
    </div>
    <div
      class="ant-page-header-content"
    >
      sqlQuery.pageDescribe
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-space ant-space-vertical full-width-element"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-loading ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-loading-content"
            >
              <div
                class="ant-row"
                style="margin-left: -4px; margin-right: -4px;"
              >
                <div
                  class="ant-col ant-col-22"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
              </div>
              <div
                class="ant-row"
                style="margin-left: -4px; margin-right: -4px;"
              >
                <div
                  class="ant-col ant-col-8"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
                <div
                  class="ant-col ant-col-15"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
              </div>
              <div
                class="ant-row"
                style="margin-left: -4px; margin-right: -4px;"
              >
                <div
                  class="ant-col ant-col-6"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
                <div
                  class="ant-col ant-col-18"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
              </div>
              <div
                class="ant-row"
                style="margin-left: -4px; margin-right: -4px;"
              >
                <div
                  class="ant-col ant-col-13"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
                <div
                  class="ant-col ant-col-9"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
              </div>
              <div
                class="ant-row"
                style="margin-left: -4px; margin-right: -4px;"
              >
                <div
                  class="ant-col ant-col-4"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
                <div
                  class="ant-col ant-col-3"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
                <div
                  class="ant-col ant-col-16"
                  style="padding-left: 4px; padding-right: 4px;"
                >
                  <div
                    class="ant-card-loading-block"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SqlQueryEE should match snapshot 2`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="sqlQuery.pageTitle"
        >
          sqlQuery.pageTitle
        </span>
      </div>
    </div>
    <div
      class="ant-page-header-content"
    >
      sqlQuery.pageDescribe
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-space ant-space-vertical full-width-element"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  aria-label="warning"
                  class="anticon anticon-warning text-orange"
                  role="img"
                  style="font-size: 50px;"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="warning"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <div>
                  sqlQuery.eeErrorTips
                  。
                  sqlQuery.eeErrorTips2
                  <a
                    href="https://actiontech.github.io/sqle-docs-cn/3.modules/4.2_sql_editor/overview.html"
                    rel="noreferrer"
                    target="_blank"
                  >
                    common.clickHere
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SqlQueryEE should render error when req throw error 1`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="sqlQuery.pageTitle"
        >
          sqlQuery.pageTitle
        </span>
      </div>
    </div>
    <div
      class="ant-page-header-content"
    >
      sqlQuery.pageDescribe
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-space ant-space-vertical full-width-element"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  aria-label="warning"
                  class="anticon anticon-warning text-orange"
                  role="img"
                  style="font-size: 50px;"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="warning"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <div>
                  sqlQuery.eeErrorTips
                  。
                  sqlQuery.eeErrorTips2
                  <a
                    href="https://actiontech.github.io/sqle-docs-cn/3.modules/4.2_sql_editor/overview.html"
                    rel="noreferrer"
                    target="_blank"
                  >
                    common.clickHere
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
